--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,23 @@ body{
 p{
 	color:rgb(80,80,80);
 }
+label{
+	color:rgb(80,80,80);
+	font-size:13px;
+}
+button{
+	background-color:rgb(180,180,180);
+	color:white;
+	border-radius:4px;
+	border:none;
+	font-size:16px;
+	padding:10px;
+	transition-property: background-color;
+	transition-duration: 200ms;
+}
+button:hover{
+	background-color:rgb(80,80,80);
+}
 hr{
 	width:40%;
 	border:0;
@@ -38,7 +55,7 @@ nav{
 	text-align:center;
 	padding:30px;
 }
-nav::after{
+div::after,nav::after{
 	content:"";
 	display:block;
 	clear:both;
@@ -63,6 +80,10 @@ a,a:active,a:visited{
 a:hover{
 	color:rgb(80,80,80);
 }
+input{
+	box-sizing:border-box;
+	width:100%;
+}
 div{
 	background:rgba(255,255,255,0.9);
 }
@@ -82,11 +103,50 @@ div.cont{
 	margin-top:30px;
 	margin-bottom:30px;
 	width:70%;
+	max-width:1000px;
+}
+div.input{
+	box-sizing:border-box;
+	background-color:rgba(255,255,255,0);
+	display:inline-block;
+	width:30%;
+	margin:1%;
+	padding:0;
 }
 div.title{
 	text-align:center;
 	font-size:20px;
 	background:rgba(255,255,255,0);
+}
+div.blog{
+	color:white;
+	background-color:rgba(0,0,0,0.7);
+	background-image:url("../img/slide-1.jpg");
+	background-repeat:no-repeat;
+	background-size:100% 100%;
+	height:500px;
+}
+div.image-with-cap{
+	box-sizing:border-box;
+	margin:1%;
+	width:30%;
+	text-align:center;
+	font-size:18px;
+	border-radius:2px;
+	float:left;
+}
+.image-with-cap img{
+	width:100%;
+}
+.cont img{
+	max-width:100%;
+}
+.veil{
+	box-sizing:border-box;
+	padding:20px;
+	width:100%;
+	height:100%;
+	background-color:rgba(0,0,0,0.7);
 }
 #menu-panel{
 	display:none;
@@ -97,6 +157,13 @@ div.title{
 }
 #carousel{
 	text-align:center;
+}
+#msg-div{
+	width:100%;
+	height:200px;
+}
+#Message{
+	height:95%;
 }
 .owl-carousel,.owl-dots, .owl-nav, .owl-dot{
 	background: rgba(255,255,255,0);
@@ -125,13 +192,25 @@ div.title{
 		padding:5px 10px 5px 10px;
 		margin-right:20%;
 	}
-	.cont{
+	div.cont{
 		padding:15px;
 		width:80%;
 	}
 }
+@media screen and (max-width:800px){
+	div.image-with-cap{
+		width:100%;
+		margin:auto;
+		margin-top:30px;
+	}
+	div.input{
+		width:100%;
+		margin:auto;
+		margin-top:30px;
+	}
+}
 @media screen and (max-width:500px){
-	.cont{
+	div.cont{
 		width:90%;
 		padding:5px;
 	}
